--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,7 +1,11 @@
 @import 'public';
+body{
+	font-family: "微软雅黑";
+	position: relative;
+}
 header{
 	@include size(100%,128px);
-	background:pink;
+	
 	display:flex;
 	
 	flex-direction:column;
@@ -15,23 +19,60 @@ header{
 		.ht-main{
 			font-size: 12px;
 			line-height: 28px;
-			width: 1001px;
+			width: 1000px;
 			height: 100%;
-			background: pink;
 			color: #666666;
-			overflow: hidden;
+			
+			position: relative;
+			
+		}
+	}
+	.noticeBox{
+		height:100%;
+		width: 200px;
+		overflow:hidden;
+		float:left;
+		position: relative;
+		.noticeContent{
+			height: 28px;
+			
+			margin-top: 0;
+			position: absolute;
+			top:0;
+			left: 2px;
+			
 		}
 	}
 	.headerBottom{
-		@include size(1001px,98px);
+		@include size(1000px,98px);
 		background: white;
 		padding-top: 20px;
+		display:flex;
+		justify-content:space-between;
+		img{
+			cursor: pointer;
+		}
+		img:last-child{
+			height: 63px;
+			width: 186px;
+		}
 	}
 	.search{
-		@include size(418px,34px)
-		input{
+		@include size(416px,32px);
+		border:2px solid #f70801;
+		margin-top: 5px;
+		input:first-child{
 			border: none;
-			
+			@include size(341px,32px);
+			text-indent: 12px;
+		}
+		input:last-child{
+			border: none;
+			font-size: 12px;
+			color: #FFFFFF;
+			@include size(75px,32px);
+			background: #f70801;
+			cursor: pointer;
 		}
 	}
 }
@@ -65,5 +106,137 @@ header .headerTop .ht-main .sNav{
 			margin-right: 6px;
 			vertical-align: middle;
 		}
+		
 	}
+}
+header .headerTop  .downApp{
+	width: 110px;
+	height: 138px;
+	background: #fff;
+	position: absolute;
+	right: -30px;
+	top: 27px;
+	box-shadow: 0 0 3px #ddd;
+	display: none;
+	
+	i{
+		display: block;
+		width:14px;
+		height: 7px;
+		position: absolute;
+		top: -6px;
+		left: 48px;
+		background: url(../../dist/img/icon.png);
+		background-position: 0 -146px;
+	}
+	img{
+		padding: 12px 0 0 12px;
+	}
+	span{
+		font-size: 14px;
+		color: #f70800;
+		margin-left: 21px;
+	}
+}
+nav{
+	@include size(100%,40px);
+	background: #f70800;
+	display:flex;
+	justify-content:center;
+	.navMain{
+		width: 1000px;
+		height: 100%;
+		display: flex;
+		justify-content: space-between;
+		a{
+			float: left;
+			font-size: $fontSize;
+			color: #fff;
+			line-height: 40px;
+			padding: 0 20px;
+			font-weight: bold;
+			height: 40px;
+			
+		}
+		a:first-child{
+			background: #bc0600;
+		}
+		a:nth-child(2){
+			img{
+				vertical-align: text-bottom;
+				padding-right: 2px;
+				border: none;
+			}
+		}
+		span{
+			display: b;
+			height: 100%;
+			width: 134px;
+			cursor: pointer;
+			background: url(../../dist/img/searchbar.jpg) no-repeat;
+			background-position: 0 -65px;
+		}
+	}
+}
+.menuBar{
+	width: 998px;
+	height: 270px;
+	border: 1px solid #f70800;
+	position: absolute;
+	left: 50%;
+	margin-left: -500px;
+	display: none;
+	ul {
+		width:100%;
+		height:270px ;
+		display: flex;
+		li{
+			width: 165px;
+			height: 100%;
+			border-right: 1px solid #ededed;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			.barTitle{
+				width: 135px;
+				height: 49px;
+				border-bottom: 1px dashed #d9d9d9;
+				font-size:$fontSize ;
+				color: #222;
+				
+				img{
+					line-height: 46px;
+					float: left;
+					margin-left: 15px;
+				}
+				div{
+					float: left;
+					a{
+						line-height: 46px;
+						font-weight: bold;
+					}
+				}
+				
+				margin-top: 5px;
+				
+			}
+			.barContent{
+				width: 135px;
+				font-size: 12px;
+				color: #555;
+				display: flex;
+				flex-direction: column;
+				align-items: center;
+				padding-top: 4px;
+				a{
+					line-height: 24px;
+				}
+			}
+		}
+		li:last-child{
+			border: none;
+		}
+	}
+	
+	
 }
