banner图右和侧功能键 TV直播

--- a/src/sass/_public.scss
+++ b/src/sass/_public.scss
@@ -2,7 +2,7 @@
 	margin: 0;
 	padding: 0;
 }
-
+i{font-style: normal}
 em{font-style:normal}
 li{list-style:none}
 a{color:#172c45;text-decoration:none} 
