--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -11,8 +11,9 @@ header{
 	flex-direction:column;
 	align-items:center;
 	.headerTop{
-		@include size(100%,28px);
-		border: 1px solid #e1e1e2;
+		@include size(1583px,28px);
+		border-top: 1px solid #e1e1e2;
+		border-bottom: 1px solid #e1e1e2;
 		display:flex;
 		justify-content:center;
 		background:#f6f6f6;
@@ -186,6 +187,8 @@ nav{
 	left: 50%;
 	margin-left: -500px;
 	display: none;
+	z-index: 10;
+	background: #ffffff;
 	ul {
 		width:100%;
 		height:270px ;
@@ -237,6 +240,316 @@ nav{
 			border: none;
 		}
 	}
-	
-	
+}
+// banner图
+.bannerBox{
+	@include size(100%,340px);
+	position:relative;
+	img{
+		width: 100%;
+		height: 340px;
+	}
+	.mark{
+		@include size(1000px,340px)
+		margin: 0 auto;
+		
+		position: absolute;
+		top: 0;
+		left: 50%;
+		margin-left: -500px;
+		a{
+			display: block;
+			height: 60px;
+			width: 30px;
+			
+		}
+		.leftPoint{
+			float: left;
+			margin-top: 140px;
+			background: url(../../dist/img/scroll.png) no-repeat;
+			background-position:0 0;
+			display: none;
+		}
+		.leftPoint:hover{
+			background-position:-92px -76px ;
+		}
+		.rightPoint{
+			margin-top: 140px;
+			float: right;
+			background: url(../../dist/img/scroll.png) no-repeat;
+			background-position:0 -76px;
+			display: none;
+		}
+		.rightPoint:hover{
+			background-position:-92px 0px;
+		}
+		span{
+			display: block;
+			height: 10px;
+			width: 10px;
+			border-radius: 50%;
+			background: #f73100;
+			position: absolute;
+			bottom: 20px;
+			left: 50%;
+			opacity: 0.85;
+		}
+	}
+}
+//右侧功能键
+.right-funct{
+	height: 100%;
+	width: 36px;
+	position: fixed;
+	right: 0;
+	top:0;
+	background: url(../../dist/img/rightbg.jpg) repeat-y right;
+	.sign-in{
+		position: relative;
+		top: 40%;
+		li{
+			width: 36px;
+			height: 36px;
+			z-index: 11;
+			border-radius: 0 0 0 5px;
+		}
+		li:first-child{
+			background: url(../../dist/img/xfbj.png) no-repeat;
+			background-position: 0 0;
+		}
+		li:first-child:hover{
+			background-position:-46px 0;
+		}
+		li:last-child{
+			background: url(../../dist/img/xfbj.png) no-repeat;
+			background-position: 0 -92px;
+		}
+		li:last-child:hover{
+			background-position:-46px -92px;
+		}
+	}
+	.first-li{
+		width: 260px;
+		height: 230px;
+		background: #ffffff;
+		position: relative;
+		top: 0;
+		left:-262px;
+		border:1px solid #ddd;
+		display: none;
+		header{
+			width: 100%;
+			height: 167px;
+			font-size: 12px;
+			img{
+				margin-bottom: 4px;
+			}
+			span{
+				cursor: pointer;
+				color: #f94e49;
+			}
+			display:flex;
+			flex-direction:column;
+			justify-content: center;
+			align-items: center;
+		}
+		footer{
+			width: 100%;
+			height: 63px;
+			background: #f8f8f8;
+			display: flex;
+			align-items: center;
+			justify-content: space-around;
+			span{
+				cursor: pointer;
+				display: block;
+				font-size: 12px;
+				width: 88px;
+				height: 28px;
+				text-align: center;
+				line-height: 28px;
+				border-radius: 5px 5px 5px 5px;
+				border: 1px solid #dddddd;
+			}
+		}
+	}
+	.last-li{
+		width: 90px;
+		height:36px ;
+		border-radius: 5px 0 0 5px;
+		background: #666;
+		position: relative;
+		left:-90px;
+		font-size:12px;
+		text-align: center;
+		line-height:36px ;
+		color: #fff;
+		display: none;
+	}
+}
+//下半部分功能键
+.right-funct .right-bottom{
+	position: absolute;
+	bottom: -3px;
+	li{
+		height: 36px;
+		width: 36px;
+		span{
+			display: block;
+			position: relative;
+			left: -90px;
+			width: 90px;
+			height:36px;
+			border-radius: 5px 0 0 5px;
+			font-size:12px;
+			text-align: center;
+			line-height:36px ;
+			color: #fff;
+			background: #666;
+			display: none;
+		}
+	}
+	li:first-child{
+		border-radius: 5px 0 0 0 ;
+		background: url(../../dist/img/xfbj.png) no-repeat;
+		background-position: 0 -184px;
+		img{
+			display: block;
+			position: relative;
+			left:-132px;
+			top:-71px;
+			display: block;
+		}
+	}
+	li:nth-child(2){
+		background: url(../../dist/img/xfbj.png) no-repeat;
+		background-position: 0 -230px;
+	}
+	li:last-child{
+		border-radius: 0 0 0 5px;
+		background: url(../../dist/img/xfbj.png) no-repeat;
+		background-position: 0 -276px;
+	}
+	li:first-child:hover{
+		background: url(../../dist/img/xfbj.png) no-repeat;
+		background-position: -47px -184px;
+	}
+	li:nth-child(2):hover{
+		background: url(../../dist/img/xfbj.png) no-repeat;
+		background-position: -47px -230px;
+	}
+	li:last-child:hover{
+		background: url(../../dist/img/xfbj.png) no-repeat;
+		background-position: -47px -276px;
+	}
+}
+// 主要内容框架
+section{
+	@include size(100%,auto)
+	background: #f2f2f2;
+}
+section .live-tv{
+	@include size(1000px,384px);
+	margin: 0 auto;
+	.live-tv-top{
+		width: 100%;
+		height:66px;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		.live-tv-topl{
+			font-size: 16px;
+			color: #444;
+			span{
+				font-size: 24px;
+				font-weight: bold;
+				i{
+				@include size(4px,22px);
+				background: #f70800;
+				float: left;
+				margin: 7px 8px 0 0;
+				}
+				b{
+					font-size: 26px;
+					color:#f70800 ;
+				}
+			}
+			
+		}
+	}
+	.live-tv-bottom{
+		box-sizing: border-box;
+		height: 316px;
+		width: 1000px;
+		border: 1px solid #ddd;
+		background: #fff;
+		padding: 19px;
+		.bottom-content{
+			li{
+				box-sizing: border-box;
+				padding: 0 10px;
+				height:266px ;
+				width: 320px;
+				float: left;
+				position: relative;
+				.bigimg{
+					width: 300px;
+					height: 160px;
+				}
+				p{
+					font-size:15px ;
+					text-indent: 10px;
+					margin-top: 10px;
+					height: 52px;
+				}
+				span{
+					font-size: 26px;
+					text-indent: 10px;
+				}
+				i{
+					font-size: 12px;
+					color: #bfb9b9;
+					text-decoration: line-through;
+					margin-left: 10px;
+				}
+				.smallimg{
+					width: 67px;
+					height: 23px;
+					position: absolute;
+					top:13px;
+					right: 22px;
+				}
+				.living{
+					display: block;
+					width: 80px;
+					height: 22px;
+					background: #ff3f5a;
+					border-radius: 11px 11px 11px 11px;
+					line-height: 22px;
+					font-size: 12px;
+					color: #fff;
+					overflow: hidden;
+					position: absolute;
+					top: 10px;
+					left: 20px;
+					i{
+						height: 5px;
+						width: 5px;
+						border-radius: 50%;
+						display: inline-block;
+						background: #fff;
+						margin: 0;
+						transform: translateY(-2px);
+					}
+				}
+				.living:after{
+					content: "TV直播中";
+				}
+			}
+			li:nth-child(2){
+				border-left:1px solid #eee ;
+				border-right:1px solid #eee ;
+			}
+		}
+	}
 }
