--- a/src/sass/_public.scss
+++ b/src/sass/_public.scss
@@ -2,6 +2,7 @@
 	margin: 0;
 	padding: 0;
 }
+img{border:0;vertical-align:middle} 
 b{font-weight: normal}
 i{font-style: normal}
 em{font-style:normal}
